# base-api

./: Cargo.toml
src/: error.rs  main.rs
src/config/: db_config.rs  db_confiig.rs  log_config.rs  mod.rs
src/db/: mod.rs
src/etc/: config.toml
src/hoops/: jwt.rs  mod.rs
