[package]
name = "base-api"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0.76", features = ["full"] }
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["std", "fmt", "env-filter", "tracing-log", "time", "local-time", "json"] }
jsonwebtoken = "9.3"
serde = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "postgres"] }
time = "0.3"
figment = { version = "0.10", features = ["env", "toml"] }
anyhow = "1.0"
thiserror = "2.0"
validator = { version = "0.20.0", features = ["derive"] }
